# pTFCE_C

./: .gitignore  CMakeLists.txt  README.md  build.sh  clustervalue.h  connectedcompsize.cc  grfClust.cc  grfClust.h  gsl_integration_wrapper.h  mathutil.cc  mathutil.h  ndf.h  pTFCE-test.cc  ptfce.cc  ptfce.h  ptfce_cmd.cc  pvalutil.cc  pvalutil.h  smoothest_app.cc  smoothest_ext.cc  smoothest_ext.h
cmake/Modules/: FindFSL.cmake
simulation/: simulate.sh
